# bureau

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .license-header.txt  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  flake.nix  go.mod  go.sum  gomod2nix.toml  lefthook.yml  lychee.toml  pyproject.toml
.claude/: README.md  settings.json
bridge/: BUILD.bazel  bridge.go  bridge_test.go  doc.go
cmd/bureau-agent/: BUILD.bazel  checkpoint.go  checkpoint_test.go  driver.go  driver_test.go  loop.go  loop_test.go  main.go
cmd/bureau-agent-claude/: BUILD.bazel  driver.go  driver_test.go  hooks.go  hooks_test.go  main.go
cmd/bureau-agent-mock/: BUILD.bazel  main.go
cmd/bureau-agent-service/: BUILD.bazel  doc.go  handler.go  handler_test.go  main.go  materialize.go  sync.go
cmd/bureau-artifact-service/: BUILD.bazel  doc.go  handler.go  handler_test.go  main.go  sync.go
cmd/bureau-credentials/: BUILD.bazel  doc.go  main.go  main_test.go
cmd/bureau-daemon/: BUILD.bazel  admin.go  admin_test.go  audit.go  audit_test.go  bureau_version.go  bureau_version_test.go  command.go  command_test.go  composition_test.go  credential_access.go  credential_access_test.go  daemon_test.go  doc.go  drain_test.go  exec.go  exec_test.go  ha.go  ha_test.go  health.go  health_test.go  layout.go  layout_watcher_test.go  lifecycle.go  machine_layout_test.go  main.go  main_test.go  metrics.go  metrics_test.go  mock_matrix_test.go  observe.go  observe_auth.go  observe_auth_query.go  observe_auth_query_test.go  observe_auth_test.go  observe_service_token.go  observe_service_token_test.go  observe_test.go  pipeline.go  pipeline_test.go  (+28 more)
cmd/bureau-daemon/testdata/mock_relay/: BUILD.bazel  main.go
cmd/bureau-fleet-controller/: BUILD.bazel  doc.go  execute.go  execute_test.go  health.go  health_test.go  main.go  placement.go  placement_test.go  reservation.go  reservation_test.go  socket.go  socket_test.go  sync.go  sync_test.go
cmd/bureau-github-service/: BUILD.bazel  autosubscribe.go  doc.go  download.go  download_test.go  github_types.go  main.go  mention.go  mention_test.go  outbound.go  outbound_test.go  provenance.go  provenance_test.go  service.go  subscribe.go  ticketsync.go  ticketsync_test.go  webhook.go  webhook_test.go
cmd/bureau-launcher/: BUILD.bazel  doc.go  exec.go  exec_test.go  firstboot.go  handlers.go  inotify.go  main.go  main_test.go  proxy.go  sandbox.go  sandbox_test.go  tmux.go  tmux_test.go
cmd/bureau-log-relay/: BUILD.bazel  doc.go  main.go  main_test.go
cmd/bureau-model-service/: BUILD.bazel  auth.go  auth_test.go  background.go  background_test.go  complete.go  complete_test.go  completion_gate.go  completion_gate_test.go  continuation.go  continuation_test.go  cost.go  cost_test.go  credentials.go  credentials_test.go  doc.go  embed.go  embed_batcher.go  embed_batcher_test.go  httpproxy.go  httpproxy_test.go  latency.go  latency_test.go  main.go  query.go  service.go  sync.go  sync_test.go
cmd/bureau-observe-relay/: BUILD.bazel  doc.go  main.go
cmd/bureau-pipeline-executor/: BUILD.bazel  doc.go  execute.go  execute_test.go  log.go  main.go  main_test.go  proxy.go  result.go  ticket.go
cmd/bureau-proxy/: BUILD.bazel  doc.go  main.go
cmd/bureau-proxy-call/: BUILD.bazel  doc.go  main.go
cmd/bureau-sandbox/: BUILD.bazel  doc.go  main.go
cmd/bureau-state-check/: BUILD.bazel  doc.go  main.go
cmd/bureau-telemetry-mock/: BUILD.bazel  main.go
cmd/bureau-telemetry-relay/: BUILD.bazel  accumulator.go  accumulator_test.go  buffer.go  buffer_test.go  doc.go  main.go  shipper.go  shipper_test.go  socket.go
integration/: BUILD.bazel  CLAUDE.md  agent_service_test.go  agent_test.go  batch_flake_publish_test.go  bootstrap_test.go  claude_agent_test.go  cli_smoke_test.go  config_hotreload_test.go  drain_test.go  environment_update_test.go  extra_inherits_test.go  fleet_controller_test.go  fleet_test.go  ha_test.go  health_test.go  helpers_test.go  inotify_test.go  interceptor_test.go  lifecycle_test.go  machine_test.go  matrix_test.go  mcp_resource_test.go  mcp_test.go  messaging_test.go  mock_llm_test.go  model_service_test.go  native_agent_test.go  operator_journey_test.go  output_capture_test.go  payload_test.go  pipeline_test.go  powerlevel_test.go  provenance_test.go  proxy_crash_test.go  quickstart_test.go  reservation_test.go  restart_test.go  revocation_test.go  sandbox_output_test.go  (+12 more)
messaging/: BUILD.bazel  admin.go  client.go  client_test.go  direct_session.go  direct_session_test.go  doc.go  errors.go  resolve.go  room_watcher.go  session.go  session_test.go  types.go
observe/: BUILD.bazel  auth_policy.go  auth_policy_test.go  authorization.go  authorization_test.go  client.go  client_test.go  control.go  control_test.go  dashboard.go  dashboard_test.go  doc.go  expand.go  expand_test.go  integration_test.go  layout.go  layout_test.go  list.go  list_test.go  machine_layout.go  machine_layout_test.go  protocol.go  protocol_test.go  query.go  query_test.go  relay.go  relay_test.go  ringbuffer.go  ringbuffer_test.go  service_token.go  testutil_test.go  tmux.go  tmux_test.go
proxy/: BUILD.bazel  attribution.go  attribution_test.go  cli_service.go  cli_service_test.go  config.go  credentials.go  credentials_test.go  doc.go  filter.go  filter_test.go  handler.go  http_service.go  http_service_test.go  interceptor.go  interceptor_test.go  matrix_api.go  matrix_api_test.go  observe.go  observe_test.go  server.go  server_test.go  telemetry.go  telemetry_test.go  testutil_test.go  types.go
sandbox/: BUILD.bazel  bwrap.go  bwrap_test.go  capabilities.go  config.go  config_test.go  doc.go  escape.go  overlay.go  profile.go  profile_test.go  sandbox.go  sandbox_test.go  systemd.go  validate.go  validate_test.go
transport/: BUILD.bazel  datachannel_conn.go  datachannel_conn_test.go  doc.go  ice.go  ice_test.go  peer_auth.go  peer_auth_test.go  signaler.go  signaler_matrix.go  signaler_matrix_test.go  signaler_memory.go  tcp.go  tcp_test.go  transport.go  webrtc.go  webrtc_test.go
(+1180 files in other folders)
