# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/bureau-foundation/bureau
gazelle(name = "gazelle")

# Exported for integration tests that need to resolve the workspace root
# through Bazel's runfiles symlink tree.
exports_files(["MODULE.bazel"])

# Remote execution platform. The platform properties must match exactly what
# bb-worker registers with the scheduler (see deploy/buildbarn/bb-worker.jsonnet).
# The scheduler routes actions to workers whose platform property set is an
# exact match — a mismatch means actions queue forever with no worker to run them.
platform(
    name = "remote_linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    exec_properties = {
        "OSFamily": "linux",
    },
)
