module(
    name = "bureau",
    version = "0.0.0",
)

# Platform constraint values for execution platform definitions.
bazel_dep(name = "platforms", version = "1.0.0")

# Go build rules and BUILD file generator.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Go SDK: version read from go.mod.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# Go dependencies: resolved from go.mod + go.sum.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_pion_webrtc_v4",
    "com_github_spf13_pflag",
    "in_gopkg_yaml_v3",
    "io_filippo_age",
    "org_golang_x_sys",
    "org_golang_x_term",
)
