# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

module(
    name = "bureau",
    version = "0.0.0",
)

# Platform constraint values for execution platform definitions.
bazel_dep(name = "platforms", version = "1.0.0")

# Go build rules and BUILD file generator.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Go SDK: version read from go.mod.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# Go dependencies: resolved from go.mod + go.sum.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_glamour",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_x_ansi",
    "com_github_fxamacker_cbor_v2",
    "com_github_junegunn_fzf",
    "com_github_klauspost_compress",
    "com_github_pierrec_lz4_v4",
    "com_github_pion_webrtc_v4",
    "com_github_spf13_pflag",
    "com_github_tidwall_jsonc",
    "com_github_zeebo_blake3",
    "in_gopkg_yaml_v3",
    "io_filippo_age",
    "org_golang_x_sys",
    "org_golang_x_term",
)
