# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

module(
    name = "bureau",
    version = "0.0.0",
)

# Platform constraint values for execution platform definitions.
bazel_dep(name = "platforms", version = "1.0.0")

# Go build rules and BUILD file generator.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Shell rules (sh_test for non-Go verification scripts).
bazel_dep(name = "rules_shell", version = "0.6.1")

# Go SDK: version read from go.mod.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

# Go dependencies: resolved from go.mod + go.sum.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_alecthomas_chroma_v2",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_x_ansi",
    "com_github_fxamacker_cbor_v2",
    "com_github_hanwen_go_fuse_v2",
    "com_github_junegunn_fzf",
    "com_github_klauspost_compress",
    "com_github_muesli_termenv",
    "com_github_pierrec_lz4_v4",
    "com_github_pion_webrtc_v4",
    "com_github_spf13_pflag",
    "com_github_tidwall_jsonc",
    "com_github_yuin_goldmark",
    "com_github_zeebo_blake3",
    "com_zombiezen_go_sqlite",
    "in_gopkg_yaml_v3",
    "io_filippo_age",
    "org_golang_x_crypto",
    "org_golang_x_sys",
    "org_golang_x_term",
)

# Nix environments: resolved during loading phase and cached by Bazel.
# Re-evaluated only when flake.nix or flake.lock change.
nix_env = use_extension("//build:nix_env.bzl", "nix_env")
nix_env.build(
    name = "integration_test_env",
    attr = "integration-test-env",
)
use_repo(nix_env, "integration_test_env")

# Lean 4 toolchain for formal verification specs (verify/).
# Downloaded from GitHub releases on first use. Tagged "manual" in BUILD
# files so `bazel test //...` never triggers the ~500 MB download — only
# explicit `bazel test //verify/reconciliation:lean_verify` does.
lean_toolchain = use_extension("//build:lean_toolchain.bzl", "lean_toolchain")
lean_toolchain.release(
    name = "lean4",
    sha256 = {
        "linux-x86_64": "ceb3a3f844f7aebf63245e2b51c28d5b0ed38942c19f93cf3febd520302160bd",
    },
    version = "4.28.0",
)
use_repo(lean_toolchain, "lean4")
