# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bureau"
version = "0.0.1"
description = "Bureau - Personal Operations System"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "The Bureau Authors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "matrix-nio>=0.24.0",
    "litellm>=1.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/benvanik/bureau"
Repository = "https://github.com/benvanik/bureau"

[tool.ruff]
line-length = 88
target-version = "py311"
preview = true

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "UP",      # pyupgrade
    "SIM",     # flake8-simplify
    "RET",     # flake8-return
    "PTH",     # flake8-use-pathlib
    "RUF",     # ruff-specific rules
    "D200",    # one-line docstring should fit on one line
    "D201",    # no blank line before function docstring
    "D202",    # no blank line after function docstring
    "D300",    # use triple double quotes
    "D415",    # docstring first line should end with punctuation
    "PLC0415", # import-outside-top-level
    "PLC2701", # import-private-name
]
ignore = [
    "E501",    # line too long (handled by black)
    "SIM108",  # use ternary operator (often less readable)
    "RET504",  # unnecessary assignment before return (explicit is better)
]

[tool.ruff.lint.isort]
known-first-party = ["bureau"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["services"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
