# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bridge",
    srcs = [
        "bridge.go",
        "doc.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/bridge",
    visibility = ["//visibility:public"],
    deps = ["//lib/netutil"],
)
