# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_test")

# Integration tests that exercise Bureau against real services (Docker).
# Tagged "manual" so they don't run with bazel test //... — they require
# Docker access. Each run allocates a dynamic port and unique project
# name, so multiple runs can execute in parallel.
#
# Run explicitly:
#   bazel test //integration:integration_test
#
# If Docker requires the docker group:
#   sg docker -c "bazel test //integration:integration_test"
go_test(
    name = "integration_test",
    size = "medium",
    srcs = [
        "bootstrap_test.go",
        "config_hotreload_test.go",
        "fleet_test.go",
        "helpers_test.go",
        "inotify_test.go",
        "lifecycle_test.go",
        "machine_test.go",
        "mcp_test.go",
        "messaging_test.go",
        "payload_test.go",
        "pipeline_test.go",
        "powerlevel_test.go",
        "proxy_crash_test.go",
        "quickstart_test.go",
        "restart_test.go",
        "service_discovery_test.go",
        "setup_test.go",
        "structured_api_test.go",
        "workspace_test.go",
        "worktree_test.go",
    ],
    data = [
        "//:MODULE.bazel",
        "//cmd/bureau",
        "//cmd/bureau-daemon",
        "//cmd/bureau-launcher",
        "//cmd/bureau-observe-relay",
        "//cmd/bureau-pipeline-executor",
        "//cmd/bureau-proxy",
        "//cmd/bureau-test-agent",
    ],
    env = {
        "BUREAU_BINARY": "$(rlocationpath //cmd/bureau:bureau)",
        "DAEMON_BINARY": "$(rlocationpath //cmd/bureau-daemon:bureau-daemon)",
        "LAUNCHER_BINARY": "$(rlocationpath //cmd/bureau-launcher:bureau-launcher)",
        "OBSERVE_RELAY_BINARY": "$(rlocationpath //cmd/bureau-observe-relay:bureau-observe-relay)",
        "PIPELINE_EXECUTOR_BINARY": "$(rlocationpath //cmd/bureau-pipeline-executor:bureau-pipeline-executor)",
        "PROXY_BINARY": "$(rlocationpath //cmd/bureau-proxy:bureau-proxy)",
        "TEST_AGENT_BINARY": "$(rlocationpath //cmd/bureau-test-agent:bureau-test-agent)",
    },
    local = True,
    tags = ["manual"],
    deps = [
        "//lib/bootstrap",
        "//lib/codec",
        "//lib/ipc",
        "//lib/principal",
        "//lib/schema",
        "//lib/sealed",
        "//lib/secret",
        "//lib/testutil",
        "//messaging",
        "//observe",
        "@org_golang_x_sys//unix",
    ],
)
