# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_test")

# Integration tests that exercise Bureau against real services (Docker).
# Tagged "manual" so they don't run with bazel test //... — they require
# Docker access. Each run allocates a dynamic port and unique project
# name, so multiple runs can execute in parallel.
#
# Run explicitly:
#   bazel test //integration:integration_test
#
# If Docker requires the docker group:
#   sg docker -c "bazel test //integration:integration_test"
go_test(
    name = "integration_test",
    size = "medium",
    timeout = "short",  # 60s hard limit — all integration tests must complete in under 40s
    srcs = [
        "agent_service_test.go",
        "bootstrap_test.go",
        "claude_agent_test.go",
        "cli_smoke_test.go",
        "config_hotreload_test.go",
        "fleet_controller_test.go",
        "fleet_test.go",
        "ha_test.go",
        "health_test.go",
        "helpers_test.go",
        "inotify_test.go",
        "lifecycle_test.go",
        "machine_test.go",
        "mcp_resource_test.go",
        "mcp_test.go",
        "messaging_test.go",
        "mock_llm_test.go",
        "native_agent_test.go",
        "operator_journey_test.go",
        "output_capture_test.go",
        "payload_test.go",
        "pipeline_test.go",
        "powerlevel_test.go",
        "proxy_crash_test.go",
        "quickstart_test.go",
        "restart_test.go",
        "revocation_test.go",
        "sandbox_output_test.go",
        "service_discovery_test.go",
        "setup_test.go",
        "stewardship_test.go",
        "structured_api_test.go",
        "telemetry_mock_test.go",
        "telemetry_test.go",
        "ticket_service_test.go",
        "workspace_test.go",
        "worktree_test.go",
    ],
    args = [
        # Cap concurrent test goroutines. With 51 t.Parallel() tests and
        # GOMAXPROCS=192, the default launches all tests simultaneously,
        # creating a burst of 50+ Matrix account registrations that
        # overwhelms Continuwuity's UIAA endpoint (HTTP 500). Sixteen
        # concurrent tests keeps enough parallelism to surface real
        # concurrency bugs while staying within the homeserver's capacity.
        "-test.parallel=16",
    ],
    data = [
        "//:MODULE.bazel",
        "//cmd/bureau",
        "//cmd/bureau-agent",
        "//cmd/bureau-agent-claude",
        "//cmd/bureau-agent-mock",
        "//cmd/bureau-agent-service",
        "//cmd/bureau-artifact-service",
        "//cmd/bureau-bridge",
        "//cmd/bureau-credentials",
        "//cmd/bureau-daemon",
        "//cmd/bureau-fleet-controller",
        "//cmd/bureau-launcher",
        "//cmd/bureau-log-relay",
        "//cmd/bureau-observe-relay",
        "//cmd/bureau-pipeline-executor",
        "//cmd/bureau-proxy",
        "//cmd/bureau-sandbox",
        "//cmd/bureau-telemetry-mock",
        "//cmd/bureau-telemetry-relay",
        "//cmd/bureau-telemetry-service",
        "//cmd/bureau-test-agent",
        "//cmd/bureau-test-agent-claude",
        "//cmd/bureau-test-service",
        "//cmd/bureau-ticket-service",
    ],
    env = {
        "AGENT_SERVICE_BINARY": "$(rlocationpath //cmd/bureau-agent-service:bureau-agent-service)",
        "ARTIFACT_SERVICE_BINARY": "$(rlocationpath //cmd/bureau-artifact-service:bureau-artifact-service)",
        "BRIDGE_BINARY": "$(rlocationpath //cmd/bureau-bridge:bureau-bridge)",
        "BUREAU_AGENT_BINARY": "$(rlocationpath //cmd/bureau-agent:bureau-agent)",
        "BUREAU_BINARY": "$(rlocationpath //cmd/bureau:bureau)",
        "CLAUDE_AGENT_BINARY": "$(rlocationpath //cmd/bureau-agent-claude:bureau-agent-claude)",
        "CLAUDE_MOCK_BINARY": "$(rlocationpath //cmd/bureau-test-agent-claude:bureau-test-agent-claude)",
        "CREDENTIALS_BINARY": "$(rlocationpath //cmd/bureau-credentials:bureau-credentials)",
        "DAEMON_BINARY": "$(rlocationpath //cmd/bureau-daemon:bureau-daemon)",
        "FLEET_CONTROLLER_BINARY": "$(rlocationpath //cmd/bureau-fleet-controller:bureau-fleet-controller)",
        "LAUNCHER_BINARY": "$(rlocationpath //cmd/bureau-launcher:bureau-launcher)",
        "LOG_RELAY_BINARY": "$(rlocationpath //cmd/bureau-log-relay:bureau-log-relay)",
        "MOCK_AGENT_BINARY": "$(rlocationpath //cmd/bureau-agent-mock:bureau-agent-mock)",
        "OBSERVE_RELAY_BINARY": "$(rlocationpath //cmd/bureau-observe-relay:bureau-observe-relay)",
        "PIPELINE_EXECUTOR_BINARY": "$(rlocationpath //cmd/bureau-pipeline-executor:bureau-pipeline-executor)",
        "PROXY_BINARY": "$(rlocationpath //cmd/bureau-proxy:bureau-proxy)",
        "SANDBOX_BINARY": "$(rlocationpath //cmd/bureau-sandbox:bureau-sandbox)",
        "TELEMETRY_MOCK_BINARY": "$(rlocationpath //cmd/bureau-telemetry-mock:bureau-telemetry-mock)",
        "TELEMETRY_RELAY_BINARY": "$(rlocationpath //cmd/bureau-telemetry-relay:bureau-telemetry-relay)",
        "TELEMETRY_SERVICE_BINARY": "$(rlocationpath //cmd/bureau-telemetry-service:bureau-telemetry-service)",
        "TEST_AGENT_BINARY": "$(rlocationpath //cmd/bureau-test-agent:bureau-test-agent)",
        "TEST_SERVICE_BINARY": "$(rlocationpath //cmd/bureau-test-service:bureau-test-service)",
        "TICKET_SERVICE_BINARY": "$(rlocationpath //cmd/bureau-ticket-service:bureau-ticket-service)",
    },
    local = True,
    tags = ["manual"],
    deps = [
        "//cmd/bureau/cli",
        "//cmd/bureau/cli/doctor",
        "//cmd/bureau/fleet",
        "//cmd/bureau/machine",
        "//cmd/bureau/mcp",
        "//cmd/bureau/pipeline",
        "//cmd/bureau/ticket",
        "//cmd/bureau/workspace",
        "//lib/artifactstore",
        "//lib/binhash",
        "//lib/bootstrap",
        "//lib/codec",
        "//lib/command",
        "//lib/credential",
        "//lib/ipc",
        "//lib/pipelinedef",
        "//lib/principal",
        "//lib/ref",
        "//lib/schema",
        "//lib/schema/agent",
        "//lib/schema/artifact",
        "//lib/schema/fleet",
        "//lib/schema/log",
        "//lib/schema/observation",
        "//lib/schema/pipeline",
        "//lib/schema/stewardship",
        "//lib/schema/telemetry",
        "//lib/schema/ticket",
        "//lib/schema/workspace",
        "//lib/secret",
        "//lib/service",
        "//lib/servicetoken",
        "//lib/templatedef",
        "//lib/testutil",
        "//messaging",
        "//observe",
        "@org_golang_x_sys//unix",
    ],
)
