# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "messaging",
    srcs = [
        "admin.go",
        "client.go",
        "direct_session.go",
        "doc.go",
        "errors.go",
        "resolve.go",
        "room_watcher.go",
        "session.go",
        "types.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/messaging",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/netutil",
        "//lib/ref",
        "//lib/secret",
    ],
)

go_test(
    name = "messaging_test",
    srcs = [
        "client_test.go",
        "direct_session_test.go",
    ],
    embed = [":messaging"],
    deps = [
        "//lib/ref",
        "//lib/secret",
    ],
)
