# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sandbox",
    srcs = [
        "bwrap.go",
        "capabilities.go",
        "config.go",
        "doc.go",
        "escape.go",
        "overlay.go",
        "sandbox.go",
        "systemd.go",
        "validate.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/sandbox",
    visibility = ["//visibility:public"],
)

go_test(
    name = "sandbox_test",
    srcs = [
        "bwrap_test.go",
        "config_test.go",
        "sandbox_test.go",
        "validate_test.go",
    ],
    embed = [":sandbox"],
    deps = ["//lib/testutil"],
)
