# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bureau-agent-mock_lib",
    srcs = ["main.go"],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-agent-mock",
    visibility = ["//visibility:private"],
    deps = ["//lib/agentdriver"],
)

go_binary(
    name = "bureau-agent-mock",
    embed = [":bureau-agent-mock_lib"],
    visibility = ["//visibility:public"],
)
