# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bureau-agent-service_lib",
    srcs = [
        "doc.go",
        "handler.go",
        "main.go",
        "materialize.go",
        "sync.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-agent-service",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/artifactstore",
        "//lib/clock",
        "//lib/codec",
        "//lib/ref",
        "//lib/schema/agent",
        "//lib/service",
        "//lib/servicetoken",
        "//lib/version",
        "//messaging",
    ],
)

go_binary(
    name = "bureau-agent-service",
    embed = [":bureau-agent-service_lib"],
    visibility = ["//visibility:public"],
)
