# Copyright 2026 The Bureau Authors
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bureau-agent_lib",
    srcs = [
        "checkpoint.go",
        "driver.go",
        "loop.go",
        "main.go",
    ],
    importpath = "github.com/bureau-foundation/bureau/cmd/bureau-agent",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/bureau/commands",
        "//cmd/bureau/mcp",
        "//lib/agentdriver",
        "//lib/artifactstore",
        "//lib/codec",
        "//lib/llm",
        "//lib/llm/context",
        "//lib/process",
        "//lib/proxyclient",
        "//lib/ref",
        "//lib/schema/agent",
        "//lib/toolserver",
    ],
)

go_binary(
    name = "bureau-agent",
    embed = [":bureau-agent_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bureau-agent_test",
    srcs = [
        "checkpoint_test.go",
        "driver_test.go",
        "loop_test.go",
    ],
    embed = [":bureau-agent_lib"],
    deps = [
        "//cmd/bureau/cli",
        "//cmd/bureau/mcp",
        "//lib/agentdriver",
        "//lib/artifactstore",
        "//lib/codec",
        "//lib/llm",
        "//lib/llm/context",
        "//lib/schema",
        "//lib/schema/agent",
    ],
)
